--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,11 +1,10 @@
-name: first action
+name: First Workflow
 on: workflow_dispatch
-Jobs:
-  First-Job:
+jobs:
+  first-job:
     runs-on: ubuntu-latest
     steps:
-      - name: first step
-        run: echo "Hello World ! How are You"
-      - name: Second step
-        run: echo "Bye Done"
-  
+      - name: Print greeting
+        run: echo "Hello World!"
+      - name: Print goodbye
+        run: echo "Done - bye!"
